--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -16,6 +16,11 @@ $blanco: #FFFFFF;
 $gris: #e1e1e1;
 $grisOscuro: #333333;
 
+$oro: #FFD700;
+$azulMarino: #001F3F;
+$verdeEsmeralda: #2E8B57;
+$crema: #FFFFF0;
+
 $separacion: 5rem;
 
 // Fuentes
