--- a/src/scss/internas/_nosotros.scss
+++ b/src/scss/internas/_nosotros.scss
@@ -8,6 +8,6 @@
 .texto-nosotros blockquote{
     font-weight: $black; // Hacer el texto en negritas
     font-size: 2.2rem; // Tamaño de 22 pixeles de la letra
-    margin: 0; // Margen 0 en todas las direcciones 
+    margin: 3rem 0 0 0; // Margen de 30 pixeles solamente en la parte superior
     padding-left: 1rem 0 3rem 0; // Relleno de 10 pixeles en la parte superior, 0 lado derecho, 30 inferior y 0 lado izquierdo
 }
