--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -16,6 +16,7 @@ $blanco: #FFFFFF;
 $gris: #e1e1e1;
 $grisOscuro: #333333;
 $rojo: rgb(189, 7, 7);
+$azul: #0077FF;
 
 $oro: #FFD700;
 $azulMarino: #001F3F;
