Módulo para eliminar propiedades terminado

--- a/src/scss/internas/_admin.scss
+++ b/src/scss/internas/_admin.scss
@@ -17,6 +17,10 @@
     &.actualizado{
         background-color: $azul;
     }
+
+    &.eliminado{
+        background-color: $rojo;
+    }
 }
 
 table.propiedades{
